--- a/cnn.tex
+++ b/cnn.tex
@@ -5,7 +5,7 @@ Convolutional neural networks (CNNs) have been one of the most influential innov
 Image classification is the process of inputting an image into the CNN and receiving a probability of classes that best describes what is happening in the image. As humans, image classification is something that is learned at a very young age and is easy to do without much effort. This is also apparent when hand-scanning LArTPC images. After learning what a neutrino event looks like in MicroBooNE, it is relatively easy to recognize simple neutrino events from cosmic ray background as well as highly ionizing particles like protons from minimum ionizing particles like muons. The very detailed images LArTPC detectors output are prime candidates for input images into a CNN. CNNs mimic a human's ability to classify objects by creating an architecture that can learn differences between all the images it's given as well as figure out the unique features that make up each object. CNNs are modeled after the visual cortex. Hubel and Wiesel\cite{hubel} found that there are small regions of neuronal cells in the brain that respond to specific regions of the visual field. They saw that some neurons fired when exposed to vertical edges while others fired when shown horizontal or diagonal edges. They also saw that these neurons were organized in columns. The idea of specific neurons inside of the brain firing to specific characteristics is the basis behind CNNs.
 
 \section{CNN Structure}
-When used for image recognition, convolutional neural networks consist of multiple layers that extract different information on small portions of the input image. How many layers is tunable to increase the accuracy. The output of these collections are then tiled so that they overlap to gain a better representation of the original image and allow for translation. The first of these layers is always a convolution layer. To the CNN, an image is an array of pixel values. For a RGB color image with width and height equal to 32x32 the corresponding array is 32x32x3. Filters, also known as neurons, of any size set by the user is then convolved with the receptive field of the image. If the filter is 5x5, the receptive field will by a patch of 5x5 on the input image. The filter is also an array of numbers called weights. The convolution of the filter and image are matrix multiplications of the weights and the pixel values. By stepping the receptive field by 1 unit, for an input image of 32x32x3 and a filter of 5x5x3 you'd get an output array of 28x28x1. This output array is called an activation map or feature map. The use of more filters preserves the spatial dimensions better. The filters can be described as feature identifiers. Examples of features in an image consist of edges, curves, and changes in colors. The first filters in a CNN will primarily be straight line and curve feature identifiers. An example of a curve filter is shown in figure \ref{fig:curvedetector}. When a curve in the same concavity is found in the input image, the corresponding pixel in the output feature map will be activated. Going back to our example of a 32x32 input image and a 5x5 filter, if there were to be a curve in the top left corner of the input image, our output feature map would have a high pixel value in the top left. Therefore, feature maps tell us where a specific feature is located in the original image. Figure \ref{fig:conv1vis} shows a visualization of filters found in the first layers of many CNN architectures. These filters in the first layer convolve around the image and activate whe nthe specific feature it is looking for is in the receptive field. 
+When used for image recognition, convolutional neural networks consist of multiple layers that extract different information on small portions of the input image. How many layers is tunable to increase the accuracy. The output of these collections are then tiled so that they overlap to gain a better representation of the original image and allow for translation. The first of these layers is always a convolution layer. To the CNN, an image is an array of pixel values. For a RGB color image with width and height equal to 32x32 the corresponding array is 32x32x3. Filters, also known as neurons, of any size set by the user is then convolved with the receptive field of the image. If the filter is 5x5, the receptive field will by a patch of 5x5 on the input image. The filter is also an array of numbers called weights. The convolution of the filter and image are matrix multiplications of the weights and the pixel values. By stepping the receptive field by 1 unit, for an input image of 32x32x3 and a filter of 5x5x3 you'd get an output array of 28x28x1. This output array is called an activation map or feature map. The use of more filters preserves the spatial dimensions better. The filters can be described as feature identifiers. Examples of features in an image consist of edges, curves, and changes in colors. The first filters in a CNN will primarily be straight line and curve feature identifiers. An example of a curve filter is shown in figure \ref{fig:curvedetector}. When a curve in the same concavity is found in the input image, the corresponding pixel in the output feature map will be activated. Going back to our example of a 32x32 input image and a 5x5 filter, if there were to be a curve in the top left corner of the input image, our output feature map would have a high pixel value in the top left. Therefore, feature maps tell us where a specific feature is located in the original image. Figure \ref{fig:conv1vis} shows a visualization of filters found in the first layers of many CNN architectures. These filters in the first layer convolve around the image and activate when the specific feature it is looking for is in the receptive field. 
 \begin{figure}[htp!]
 \centering
 \includegraphics[width=.6\textwidth]{figs/curvedetector.png}
@@ -32,13 +32,13 @@ In figure \ref{fig:convolution} you can see how an edge detection filter is used
 \begin{figure}[h!]
 \centering
 \includegraphics[width=.9\linewidth]{figs/facialDetection.png}
-\caption{Pictoral representation of Convolutional Neural Networks as well as a visual representation on CNN's complexity of layer feature extraction}
+\caption{Pictorial representation of Convolutional Neural Networks as well as a visual representation on CNN's complexity of layer feature extraction}
 \label{fig:featuremaps}
 \end{figure}
-There are other layers in a CNN architecture that will not be covered in the scope of this thesis but in a general sense, these layers are interspersed between convolution layers to preserve dimensionality and control overfitting of the network. The last layer is called a fully connected layer and its job is to output an N dimensional vector where N is the number of classes the network has been trained on. Each number in this vector represents the probability that the input image is a certain class. Fully connected layers use the feature maps of the high level features to compute the products between the weights of the previous layer to get the probabilites of each class. These weights are then adjusted throught the training process using backpropagation. 
+There are other layers in a CNN architecture that will not be covered in the scope of this thesis but in a general sense, these layers are interspersed between convolution layers to preserve dimensionality and control over-fitting of the network. The last layer is called a fully connected layer and its job is to output an N dimensional vector where N is the number of classes the network has been trained on. Each number in this vector represents the probability that the input image is a certain class. Fully connected layers use the feature maps of the high level features to compute the products between the weights of the previous layer to get the probabilities of each class. These weights are then adjusted throughout the training process using backpropagation. 
 
 \subsection{Backpropagation}
-A CNN at its onset has weights that are randomized. The filters themselves don't know how to pull out identifying information per class. For a neural network to learn, it must be trained on a training set that is labeled. Backpropagation has four seperate steps: foward pass, loss function, backward pass and updating weights. In the forward pass, a training image is passed through the whole network. All of our weights at this time are randomly initialized so the output for the first image will have no preference to a specific class. A common loss function is mean squared error (MSE): 
+A CNN at its onset has weights that are randomized. The filters themselves don't know how to pull out identifying information per class. For a neural network to learn, it must be trained on a training set that is labeled. Backpropagation has four separate steps: forward pass, loss function, backward pass and updating weights. In the forward pass, a training image is passed through the whole network. All of our weights at this time are randomly initialized so the output for the first image will have no preference to a specific class. A common loss function is mean squared error (MSE): 
 \begin{equation}
 E_{total} = \mathlarger{\mathlarger{\sum}}\frac{1}{2}(actual class -predicted class)^2 
 \end{equation}
@@ -53,7 +53,7 @@ w=w_i - \eta\frac{dL}{dW}
 
 The learning rate is a parameter given to the CNN and it describes the steps the network takes to update the weights. Higher learning rate equals large steps and a lower training time, but a learning rate that is too large can mean the CNN never converges. 
 
-Going through backpropagation consists of one training iteration. Once the network completes a specific number of iterations, another parameter given, and runs over all training images that are split up into batches, the process is considered complete. User input parameters, called hyperparameters, help the network converge to optimal weights for each layer. Batch size, learning rate, and training iteration are just some of the user input hyperparameters that help. Lastly, to check if the network has learned, a different set of labeled images are fed to the CNN iteravely through the training process to see how well it's learning. This process is especially important to make sure the network architecture isn't being affected by overfitting (memorizing training input rather than learning). 
+Going through backpropagation consists of one training iteration. Once the network completes a specific number of iterations, another parameter given, and runs over all training images that are split up into batches, the process is considered complete. User input parameters, called hyperparameters, help the network converge to optimal weights for each layer. Batch size, learning rate, and training iteration are just some of the user input hyperparameters that help. Lastly, to check if the network has learned, a different set of labeled images are fed to the CNN iteratively through the training process to see how well it's learning. This process is especially important to make sure the network architecture isn't being affected by over-fitting (memorizing training input rather than learning). 
 
 \section{Choosing Hyperparameters}
 Convolutional neural networks are a relatively new tools in computer vision. Choosing hyperparameters for your specific dataset is a non-trivial task. Hyperparameters can range from the amount of layers and filters per layer in an CNN architecture to the stride the receptive field of a filter takes, not to mention training hyperparameters such as learning rate and batch size described above. There are ways to optimize these hyperparameters via hyperparameter optimization using Bayesian Optimization \cite{optimization} but as you can imagine, optimizing an CNN architecture from scratch can be very computationally intensive. For the purpose of this thesis, two well known CNN architectures were used, AlexNet \cite{alexnet}, which won the ImageNet Large-Scale Visual Recognition Challenge (ILSVRC) in 2012 and therefore bringing awareness of CNNs, and GoogleNet \cite{googlenet}, which won the ILSVRC in 2014, giving rise to deep networks. Both AlexNet and GoogleNet architectures were used to train on LArTPC images and their low level filter weights. Higher level filter weights were randomly initialized before training so the network can learn high level features of LArTPC image classes. The AlexNet architecture is shown in figure \ref{fig:alexnet} and the GoogleNet architecture is shown in figure \ref{fig:googlenet}
@@ -61,13 +61,13 @@ Convolutional neural networks are a relatively new tools in computer vision. Cho
 \begin{figure}[htp!]
 \centering
 \includegraphics[width=0.9\linewidth]{figs/alexnet.png}
-\caption{Pictoral representation of the AlexNet model. The AlexNet model consists of 5 convolution layers and 3 fully connected layers.}
+\caption{Pictorial representation of the AlexNet model. The AlexNet model consists of 5 convolution layers and 3 fully connected layers.}
 \label{fig:alexnet}
 \end{figure}
 
 \begin{figure}[htp!]
 \centering
 \includegraphics[width=\linewidth]{figs/googlenet.png}
-\caption{Pictoral representation of the GoogleNet model. The GoogleNet model consists of 22 layers. The model implements 9 Inception modules which performs covolution and pooling in parallel and strays away from the basis that CNN layers need to be stacked up sequentially. The GoogleNet model also doesn't use fully connected layers, insteat it uses average pooling which greatly reduces the amount of parameters. GoogleNet has 12x fewer parameters than AlexNet. }
+\caption{Pictorial representation of the GoogleNet model. The GoogleNet model consists of 22 layers. The model implements 9 Inception modules which performs convolution and pooling in parallel and strays away from the basis that CNN layers need to be stacked up sequentially. The GoogleNet model also doesn't use fully connected layers, instead it uses average pooling which greatly reduces the amount of parameters. GoogleNet has 12x fewer parameters than AlexNet. }
 \label{fig:googlenet}
 \end{figure}
