--- a/intro.tex
+++ b/intro.tex
@@ -5,11 +5,11 @@
 % decide later, do the writing first
 \chapter{Introduction}
 %\addcontentsline{toc}{chapter}{Introduction}
-This thesis will be a description of work done to further increase effiiciency and purity of the charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the charged current inclusive cross section measuremnt and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. 
+This thesis will be a description of work done to further increase efficiency and purity of the muon neutrino charged current inclusive cross section measurement using the MicroBooNE detector. It will also describe the MicroBooNE detector, what neutrinos are, the charged current inclusive cross section measurement and it's importance as well as convolutional neural networks and how they can be used in $\mu/\pi$ separation. 
 
 Chapter \ref{ch:neutrinos} will talk about the background of neutrinos and the people and detectors that discovered neutrinos as well as an in depth history of neutrino oscillation and neutrino interactions. 
 
-Chapter \ref{ch:microboone} will discuss the MicroBooNE experiement, specifically, how Liquid Argon Time Projection Chambers work, the Light Collection System and the Electronic and Readout Trigger systems. This chapter will also describe the Booster Neutrino Beam sationed at Fermilab.
+Chapter \ref{ch:microboone} will discuss the MicroBooNE experiment, specifically, how Liquid Argon Time Projection Chambers work, the Light Collection System and the Electronic and Readout Trigger systems. This chapter will also describe the Booster Neutrino Beam stationed at Fermilab.
  
 Chapter \ref{ch:neutrinoID} will discuss the work that was done to detect the first neutrinos seen in the MicroBooNE detector and the software reconstruction efforts required to create an automated neutrino ID filter that was used to find the first neutrinos and then was later expanded on to create the charged current inclusive filter that will be discussed in chapter \ref{ch:meas}
 
