--- a/meas.tex
+++ b/meas.tex
@@ -183,7 +183,7 @@ track $\geq$ 75 cm & 3213 (30\%/0.6\%) & 1328 (25\%/0.3\%) \\
 \end{tabular}} 
 \end{table} 
 \subsection{Expected Backgrounds}
-Most of the selected background events will be of cosmic origin. There are two types of cosmic background, one triggered by a cosmic-ray event occurring in the beam gate time window, the other triggered by a beam induced interaction in the cyrostat followed by a misidentification of a cosmic event as a neutrino event. The first cosmic background can be subtracted from the selected events using the off-beam BNBEXT sample normalized to the on-beam. The second cosmic background events are modeled by MC by using BNB+Cosmic MC sample. 
+Most of the selected background events will be of cosmic origin. There are two types of cosmic background, one triggered by a cosmic-ray event occurring in the beam gate time window, the other triggered by a beam induced interaction in the cryostat followed by a misidentification of a cosmic event as a neutrino event. The first cosmic background can be subtracted from the selected events using the off-beam BNBEXT sample normalized to the on-beam. The second cosmic background events are modeled by MC by using BNB+Cosmic MC sample. 
 
 Other backgrounds originate from neutrino beam contaminates. A major contribution in this sector is by neutral current neutrino events, for example a charged pion track misidentified as a muon. Another contribution are $\nu_e$-like and anti-muon-neutrino events. These beam related backgrounds are an order of magnitude smaller than the cosmic misidentification backgrounds. These backgrounds can not be eliminated and are estimated using MC truth.
 
