--- a/neutrinoID.tex
+++ b/neutrinoID.tex
@@ -36,7 +36,7 @@ A flash is described as a collection of light seen at the same time within the d
 	\quad
 \label{fig:petime}
 \end{figure}
-It is necessary to get the specific time from flashes if one uses flashes to filter out background from neutrino interactions coincident with the neutrino beam spill period. Before a filter can be applied, an understanding of the timing of the trigger and PMT readout with respect to the arrival of neutrinos from the BNB is necessary. To do this, a 1.6 $\micro s$ window near the expected beamtime was created and verified by finding that the number of flashes was significantly above the cosmic-ray background flashes. Beam data during the first week of running, October 16th 2016 through October 22nd 2016, were used for a timing measurement. The total POT used corresponds to roughly 24 hours of data taking at nominal intensity ($4 X 10^{12} ppp$) and a 5 Hz repetition rate. Figure \ref{fig:pe_sim} shows the size of the expected neutrino signal in time using MC predictions and figure \ref{fig:pe_data} shows the neutrino signal in data. The intensity in data is lower, however a significant excess above data can still be seen.
+It is necessary to get the specific time from flashes if one uses flashes to filter out background from neutrino interactions coincident with the neutrino beam spill period. Before a filter can be applied, an understanding of the timing of the trigger and PMT readout with respect to the arrival of neutrinos from the BNB is necessary. To do this, a 1.6 $\micro s$ window near the expected beam-time was created and verified by finding that the number of flashes was significantly above the cosmic-ray background flashes. Beam data during the first week of running, October 16th 2016 through October 22nd 2016, were used for a timing measurement. The total POT used corresponds to roughly 24 hours of data taking at nominal intensity ($4 X 10^{12} ppp$) and a 5 Hz repetition rate. Figure \ref{fig:pe_sim} shows the size of the expected neutrino signal in time using MC predictions and figure \ref{fig:pe_data} shows the neutrino signal in data. The intensity in data is lower, however a significant excess above data can still be seen.
 
 \subsection{Event Rates}
 Applying a 50 PE threshold cut inside a 1.6 $\micro s$ window reduces the cosmic-ray passing rate to 0.8\%. With a 5 Hz beam rate, this corresponds to 135 cosmics passing per hour. The neutrino passing rate for this filter is about 22 events per hour. To further increase the neutrino to cosmic ratio, TPC topology cuts were implemented and will be discussed in the following section.
@@ -53,7 +53,7 @@ The first step in TPC selection was based on the geometry of cosmic tracks in an
 \item 0.4: The track is entering or exiting through the Z boundary
 \item 0: The track isn't tagged
 \end{itemize}
-Clusters are assigned either a 0 or 1, 1 being a cosmic. In simulation, 90\% of cosmics are tagged as cosmics. These tracks are no longer considered when looking for a neutrino topology. Requiring that the tracks be contained in turn affects the neutrino efficiency by 20\%. The algorithm checks that each track is contained within a boundary region of 10 cm from all sides of the TPC. This boundary region was optimized via handscanning of experimental data.
+Clusters are assigned either a 0 or 1, 1 being a cosmic. In simulation, 90\% of cosmics are tagged as cosmics. These tracks are no longer considered when looking for a neutrino topology. Requiring that the tracks be contained in turn affects the neutrino efficiency by 20\%. The algorithm checks that each track is contained within a boundary region of 10 cm from all sides of the TPC. This boundary region was optimized via hand-scanning of experimental data.
 
 As can be expected, cosmic tagging is more efficient in the 3D channel (tracks) than the 2D channel (clusters) because the reconstructed tracks can use the full 3D position information of the entering and exiting points while the 2D channel mainly use the reconstructed x position of the cluster which is associated to timing. 
 
@@ -63,7 +63,7 @@ After looking at experimental cosmics data, 2D clustering performs well, while 3
 \subsubsection{Primary Cuts}
 The first cuts were used to select which clusters to consider. First the clusters must have at least ten hits on the collection plane and have a cosmic tagging score < 0.4. Only events that have at least two clusters that satisfy these primary cuts continue on.
 
-After the initial cosmic tagging is applied, the following cuts are used to furture separate identifiable neutrinos for background cosmics. 
+After the initial cosmic tagging is applied, the following cuts are used to further separate identifiable neutrinos for background cosmics. 
 
 The next cut was to remove long, vertical clusters. This was applied after seeing that most cosmic induced clusters passing were long with high angles, while neutrino induced clusters were mainly forward going. We required a good cluster to either have a projected start angle less than 30 degrees from the z axis or be less than 200 wires long. The length cut was added to make sure we don't cut any short high angle clusters that can correspond with a proton, or other highly ionizing particle associated with a long muon cluster. The 200 wire cut roughly equates to 0.6 m in the z direction, with a 3 mm wire pitch. Also, the projected angle is defined by tan $\alpha$ = $\Delta T / \Delta W$ where T is the time ticks and W is the wires. 
 
