--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -7,11 +7,11 @@ Neutrinos are fundamental particles which help make up the universe. They are al
 As previously stated, neutrinos are very weakly interacting; in fact, neutrinos can pass unscathed through a wall of lead several hundred light-years thick. Because neutrinos interact so rarely, studying neutrinos requires a massive detector and a powerful neutrino source. With that being said, we can only ``see'' a neutrino when they interact in a detector. In a collision, distinct charged particles are produced with each type of neutrino because of the weak force. An electron neutrino will create an electron, a muon neutrino will create a muon, and a tau neutrino will create a tau. The charged lepton track the particle leaves in the detector is how one figures out what type of neutrino interaction was ``seen''. Liquid Argon Time Projection Chambers are being used to study neutrinos due to their excellent imaging and particle identification capabilities. 
 
 \section{History of Neutrinos}
-The neutrino was first postulated by Wolfgang Pauli in 1930 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay \cite{pauli}. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron \cite{chadwick}, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in italian) in 1933 to fix this confusion. 
+The neutrino was first postulated by Wolfgang Pauli in 1930 to explain how to resolve the conservation of energy, momentum and angular momentum problem in beta decay \cite{pauli}. Pauli suggested that this missing energy might be carried off, unseen, by a neutral particle (he called neutron) which was escaping detection. James Chadwick discovered a much heavier nuclear particle in 1932 that he also named neutron \cite{chadwick}, leaving two particles with the same name. Enrico Fermi was the first person to coin the term neutrino (which means little neutral one in Italian) in 1933 to fix this confusion. 
 
-Fermi's paper \cite{fermi}, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1956 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino \cite{cowan1}\cite{cowan2}. The experiment called for antineutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
+Fermi's paper \cite{fermi}, which was published in 1934, unified Pauli's neutrino with Paul Dirac's positron and Werner Heisenberg's neutron-proton model and his theory accurately explained many experimentally observed results. Wang Ganchang first proposed the use of beta capture to experimentally detect neutrinos and in 1956 Clyde Cowan and Frederick Reines published their work stating that they had detected the neutrino \cite{cowan1}\cite{cowan2}. The experiment called for anti-neutrinos created in a nuclear reactor by beta decay that reacted with protons producing neutrons and positrons: $\nu_{e} +p^{+}\rightarrow n^{0} + e^{+}$. Once this happens, the positron finds an electron and they annihilate each other and the resulting gamma rays are detectable. The neutron is detected by neutron capture and the releasing of another gamma ray. 
 
-In 1962 Leon M. Lenderman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino \cite{leonlederman}. The trio received the 1988 Nobel Prize in Physics for their discovery of the muon neutrino. The experiment used a beam of energetic protons from Brookhaven's Alternating Gradient Synchrotron (AGS) to produce a shower of pions. These pions would then travel 70 ft. toward a 5,000 ton steel wall. The pions then decayed into muons and neutrinos, the neutrinos being the only particle making it through. These neutrinos would enter a neon-filled detector producing muon spark trails that were detected and photographed, proving the existence of muon neutrinos. The experiment's use of the first ever neutrino beam was pioneering work that scientists around the world still use today.  
+In 1962 Leon M. Lederman, Melvin Schwartz and Jack Steinberger were the first to detect interactions of the muon neutrino \cite{leonlederman}. The trio received the 1988 Nobel Prize in Physics for their discovery of the muon neutrino. The experiment used a beam of energetic protons from Brookhaven's Alternating Gradient Synchrotron (AGS) to produce a shower of pions. These pions would then travel 70 ft. towards a 5,000 ton steel wall. The pions then decayed into muons and neutrinos, the neutrinos being the only particle making it through. These neutrinos would enter a neon-filled detector producing muon spark trails that were detected and photographed, proving the existence of muon neutrinos. The experiment's use of the first ever neutrino beam was pioneering work that scientists around the world still use today.  
 
 The first detection of the tau neutrino was announced in the summer of 2000 by the DONUT collaboration at Fermilab \cite{donut}.The scientists used the Tevatron to produce an intense neutrino beam. The neutrinos then passed through layers of nuclear emulsion. When a neutrino interaction would occur, charged particles would leave visible tracks in the emulsion. 
 
@@ -90,7 +90,7 @@ R = \frac{(\nu_{\mu} + \overline{\nu_{\mu}})}{(\nu_{e} + \overline{\nu_{e}})}
 \end{equation} 
 
 
-There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio measured in the detector to the ratio thats expected which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly \cite{superk}.
+There have been two types of detectors used to study atmospheric neutrinos: Water Cherenkov detectors and tracking calorimeters. Atmospheric detector experiments measure the ratio of $\nu_{\mu}$ to $\nu_{e}$. They also measure the zenith angle distribution of the neutrinos. These experiments report a double ratio (shown in equation \ref{eq:doubleratio}). This double ratio is the ratio measured in the detector to the ratio that's expected which is 2. If the double ratio equals to 1, the data agrees with the prediction. Various measurements from multiple experiments are shown in figure \ref{fig:ratiotable}. Except for Frejus, all R measurements are less than 1. This discrepancy between the predicted R and the measured R became known as the Atmospheric Neutrino Anomaly \cite{superk}.
 \begin{equation}
 \label{eq:doubleratio}
 R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
@@ -98,7 +98,7 @@ R = \frac{(N_{\mu}/N_{e})_{DATA}}{(N_{\mu}/N_{e})_{SIM}}
 
 \begin{table}[htp!]
 \centering
-\caption{Measurments of the double ratio for various atmospheric neutrino experiments}
+\caption{Measurements of the double ratio for various atmospheric neutrino experiments}
 \label{fig:ratiotable}
 \resizebox{0.7\textwidth}{!}{\begin{tabular}{c c c}
 \hline
@@ -106,7 +106,7 @@ Experiment & Type of experiment & R\\
 \hline
 Super-Kamiokande & Water Cherenkov & 0.675 $\pm$ 0.085\\ 
 Soudan2 & Iron Tracking Calorimeter & 0.69 $\pm$ 0.13\\
-IMB & Water Cherenkiv & 0.54 $\pm$ 0.12\\
+IMB & Water Cherenkov & 0.54 $\pm$ 0.12\\
 Kamiokande & Water Cherenkov & 0.60 $\pm$ 0.07\\
 Frejus & Iron Tracking Calorimeter & 1.0 $\pm$ 0.15\\
 \hline
@@ -122,7 +122,7 @@ Neutrino oscillation was first predicted by Bruno Pontecorvo \cite{pontecorvo}. 
 \subsection{Two Flavor Neutrino Oscillation Formulation}
 The flavor eigenstates can oscillate between each other because they are composed of an add mixture of mass eigenstates($\nu_{1}$,$\nu_{2}$). Figure \ref{fig:mixing} shows the mass and flavor eigenstates rotated by an angle $\theta$ which is the mixing angle. 
 
-In matrix form the wavefunctions are:
+In matrix form the wave-functions are:
 
 \begin{equation}
 \begin{pmatrix}
@@ -271,9 +271,9 @@ $\delta_{cp}$ & unknown\\
 \end{table}
 
 \section{Neutrino Interactions}
-As stated previously, neutrinos interact via the weak force, because of this, we don't directly see the path of the neutrino through a detector. It is important to understand neutrino interactions, and hence cross-sectionsk before precision measurements of neutrino oscillations can be determined. 
+As stated previously, neutrinos interact via the weak force, because of this, we don't directly see the path of the neutrino through a detector. It is important to understand neutrino interactions, and hence cross-sections before precision measurements of neutrino oscillations can be determined. 
 \subsection{Weak Interactions}
-The weak force has two forms, charged-current (CC) interactions which are mediated by the $W^{\pm}$ boson, and neutral-curren (NC) which are mediated by the $Z^0$ boson. These bosons are very heavy \cite{griffiths}. Their masses have been measured to be \ref{eq:masses}.
+The weak force has two forms, charged-current (CC) interactions which are mediated by the $W^{\pm}$ boson, and neutral-current (NC) which are mediated by the $Z^0$ boson. These bosons are very heavy \cite{griffiths}. Their masses have been measured to be \ref{eq:masses}.
 \begin{equation}
 M_w = 82 \pm 2 GeV/c^2,	M_z = 92 \pm 2 Gev/c^2
 \label{eq:masses}
