--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -36,7 +36,7 @@ The purpose of this thesis was to use Convolutional Neural Networks (CNN) to sep
 %% Acknowledgements
 \begin{acknowledgements}
   Of the many people who deserve thanks, some are particularly prominent,
-  such as my advisor Mitch Soderberg who took a chance on me and supported me even though I struggled through the courses. Katherine, thanks for always lending an ear to bounce off ideas, answering all my questions and for being my best friend. Duncan Brown, thank you for seeing that there was potential in me and for helping me get through the hurdle that was Quals. Fabian, thank you for studying for the Quals with me. Without your infectious optimism I wouldn't have made it. Lastly, thank you Jedidah Isler for showing me that it is possible for a woman of color to succeed in this field and for taking a vested interest in my success.     
+  such as my advisor Mitch Soderberg who took a chance on me and supported me even though I struggled through the courses. Katherine, thanks for always lending an ear to bounce off ideas, answering all my questions and for being my best friend. Duncan Brown, thank you for seeing that there was potential in me and for helping me get through the hurdle that was Quals. Fabian, thank you for studying for the Quals with me. Without your infectious optimism I wouldn't have made it. To Richard Cardenas, thanks for being the first person to introduce me to physics as a career choice and for supporting me when no one believed I could double major in Electrical Engineering and Applied Physics in 4 years. Lastly, thank you Jedidah Isler for showing me that it is possible for a woman of color to succeed in this field and for taking a vested interest in my success.     
 \end{acknowledgements}
 
 
